--- a/style.css
+++ b/style.css
@@ -19,19 +19,13 @@
   }
 }
 
-.form-control.success {
-  border-color: #198754;
-}
-.form-control.error {
-  border-color: #dc3545;
-}
-.form-error {
-  color: #dc3545;
-  font-size: 0.8rem;
-  text-align: left;
-}
-
 form .form-control:focus{
     border-color: #ced4da;
     box-shadow: none;
   }
+#msg1{
+    color: red;
+}
+#msg{
+    color: green;
+}
